Version 2.1 - 14 March 2020 (3.14.2020 Pi day)
    - Migrated the repository to https://github.com/softwareqinc/qpp
    - Changed gate definitions in "qasm/preprocessor.h" so they agree with
      Qiskit, see https://github.com/softwareqinc/qpp/issues/65 and 
      https://github.com/softwareqinc/qpp/issues/70
    - Minor API change in the QEngine::execute()/reset()/reset_stats(), now
      they all return a reference to *this
    - Added Bit_circuit::display() and Bit_circuit::to_JSON() in "reversible.h"
    - Added the option for "shifted" control gates in:
          qpp::applyCTRL()
          qpp::Gates::CTRL()
          qpp::QCircuit::CTRL()

Version 2.0 - 24 August 2019
    - Added support for OpenQASM via the interface "qasm/qasm.h" containing:
          qpp::QCircuit qpp::qasm::read_from_file(const std::string& fname)
            - reads a OpenQASM file and returns the qpp::QCircuit representation
          qpp::QCircuit qpp::qasm::read(std::ifstream& stream)
            - reads an input stream and returns the qpp::QCircuit representation
    - Added corresponding OpenQASM examples in the directory
      "examples/circuits/qasm"
    - Implemented qpp::QCircuit::
          kron()     - Kronecker product with another quantum circuit
                       description
          measureZ() - new overload that allows multiple targets at once
          adjoint()  - in place adjoint of quantum circuit description
          kron()     - in place Kronecker product with another quantum circuit
                       description
    - Implemented the corresponding free functions as friends of qpp::QCircuit:
          qpp::adjoint()     - adjoint of quantum circuit description
          qpp::kron()        - Kronecker product between two quantum circuit
                               descriptions
          qpp::replicate()   - replicates (repeats) a quantum circuit
                               description